x.y.z
=====

Release date:

New features:

Bug fixes:

Other:

3.4.0
=====

Release date:

Sun, 26 Jun 2022 21:42:11 +0300

New features:

* Fetch the newest version and show in status bar if newer version available

* Fix GitHub Issue #210: Option to set shadow offset and disable shadows
  - Adds effects tab to the settings dialog
  - Shadow offset and blur radius can now be set

* Fix GitHub Issue #211: Color defaults
  - Default colors can now be set via the default settings tab

* Make it possible to tune shadow colors via the effects tab

3.3.0
=====

Release date:

Thu, 12 May 2022 21:09:29 +0300

New features:

* Add German translations

* Fix GitHub Issue #206: An option to change the size of the arrows
  - Toolbar now includes a spinner widget to set the arrow size

Bug fixes:

* Fix GitHub Issue #205: Click dragging from an existing node, 
  then pressing delete before dropping the node, crashes the program

3.2.0
=====

Release date:

Sat, 15 Jan 2022 20:42:13 +0200

New features:

* Fix GitHub Issue #181: Copy should copy also edges within the group
  - When copying (and pasting) nodes, also the edges within the copy group are now copied

Bug fixes:

* Fix GitHub Issue #195: Decrease size of "About" dialog

Other:

* Updated Dutch & Italian translations

3.1.0
=====

Release date:

Fri, 24 Dec 2021 12:47:41 +0200

New features:

* Option to automatically snap existing nodes to grid

* Option for dashed lines in the edge context menu

Bug fixes:

* Fix GitHub Issue #186: Icon is installed in /usr/share/icons/hicolor/64x64 but actual size is 256x256

* Fix GitHub Issue #188: Double-clicking on a large node zooms in incorrectly

* Fix GitHub Issue #189: Export to PNG breaks zoom out

* Fix GitHub Issue #190: Export to PNG works only once
  - Fixes the same issue with SVG export, too

Other:

* Simplify edge context menu

3.0.0
=====

Release date:

Sun, 21 Nov 2021 22:43:30 +0200

New features:

* Fix GitHub Issue #36: Double-click to zoom into a node